--- a/cinema/src/main/resources/static/css/header.css
+++ b/cinema/src/main/resources/static/css/header.css
@@ -3,10 +3,11 @@ header{
     top: 0;
     width: 100%;
     background-color: black;
+    opacity: 0.95;
     color: white;
     display: flex;
     justify-content: space-between;
-    padding: 16px 0;
+    padding: 10px 0 10px 0;
     align-items: center;
     z-index: 2;
 }
@@ -21,23 +22,99 @@ header nav{
 }
 
 header ul{
-    display: flex;
-    margin-left: 20%;
+    margin-left: 160px;
+    padding: 0;
+    list-style: none;
+    display: table;
+    width: 800px;
+    text-align: center;
 }
 
 header ul li{
+    display: table-cell;
+    position: relative;
+    padding: 5px 0;
+    font-size: 20px;
+    font-weight: 10;
     list-style: none;
     margin-left: 20px;
 }
+.dropdown{
+    font-size: 20px;
+    transition: 0.5s;
 
-header button{
-    margin-right: 40px;
-    font-size: 17px;
-    padding: 12px 26px;
-    background-color: white;
+}
+.dropbtn{
+    font-size: 20px;
+}
+
+#main-login-button{
+    margin-right: 100px;
+    margin-bottom: 6px;
+    font-size: 22px;
+    padding: 15px 26px;
+    background-color: #000000;
     border: 0;
     border-radius: 35px;
-    color: black;
+    color: #ffffff;
     font-weight: bold;
     cursor: pointer;
+    transition: background-color  0.5s;
+}
+
+#main-login-button:hover {
+    background-color: #ffffff;
+    color: #000;
+}
+
+#main-login-button:focus,
+#main-login-button:active {
+    background-color: black;
+
+}
+
+
+.dropdown a:hover, .dropdown a:visited, .dropdown a:link{
+    color: black;
+    text-decoration:none ;
+}
+.main-nav a:hover, .main-nav a:visited, .main-nav a:link{
+    color: inherit;
+    text-decoration:none ;
+}
+.card-container a:hover, .card-container a:visited, .card-container a:link{
+    color: inherit;
+    text-decoration:none ;
+}
+.main-nav a {
+    color: #fff;
+    font: bold 14px/1.4 'Open Sans', arial, sans-serif;
+    text-transform: uppercase;
+    text-decoration: none;
+    letter-spacing: 0.15em;
+
+    display: inline-block;
+    padding: 15px 20px;
+    position: relative;
+}
+.main-nav a:after {
+    background: none repeat scroll 0 0 transparent;
+    bottom: 6px;
+    content: "";
+    display: block;
+    height: 2px;
+    left: 50%;
+    position: absolute;
+    background: #fff;
+    transition: width 0.3s ease 0s, left 0.3s ease 0s;
+    width: 0;
+}
+a:hover:after {
+    width: 100%;
+    left: 0;
+}
+@media screen and (max-height: 300px) {
+    .main-nav ul {
+        margin-top: 40px;
+    }
 }
