--- a/cinema/src/main/resources/templates/index.html
+++ b/cinema/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <title>Cinema</title>
+    <title>QUAD Cinema</title>
 </head>
 <body>
 <div id="background-popup"></div>
@@ -34,7 +34,7 @@
             <a th:href="@{/movie}">
                 <li>Фільми</li>
             </a>
-            <a th:href="@{/soon}">
+            <a>
                 <li>Розклад сеансів</li>
             </a>
             <a th:href="@{/info}">
