--- a/cinema/src/main/resources/templates/movies.html
+++ b/cinema/src/main/resources/templates/movies.html
@@ -7,14 +7,10 @@
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     <link rel="stylesheet" type="text/css" href="/css/header.css">
     <link rel="stylesheet" type="text/css" href="/css/popup.css">
-    <link rel="stylesheet" type="text/css" href="/css/movie.css">
-
-    <link rel="icon" type="image/x-icon" href="/img/logo.png">
+    <link rel="stylesheet" type="text/css" href="/css/all-movies.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-
-
     <title>QUAD Cinema</title>
 </head>
 <body>
@@ -76,35 +72,28 @@
     </div>
 </div>
 
+    <main>
+        <div id="movie-card-box" class="filmsWrapper">
+<!--            <div class="card">-->
+<!--                <div class="poster">-->
+<!--                    <img id="bigImg" src="https://www.kinolumiere.com/uploads/films/1681206161_Renfield_1920x800_Lumiere.jpg" alt="bigLogo">-->
+<!--                </div>-->
+<!--                <div class="information">-->
+<!--                    <h1>Вавилон</h1>-->
+<!--                    <p style="font-weight: bold;">Рік: <span id="year">2023</span></p>-->
+<!--                    <p style="font-weight: bold;">Тривалість: <span id="duration">189 хв.</span></p>-->
+<!--                    <p style="font-weight: bold;">Жанр: <span id="genre">історичний, драма</span></p>-->
+<!--                    <p class="movieDescription">Лауреат премії «Оскар» Демієн Шазелл збирає неповторний зірковий каст-->
+<!--                    та запрошує поринути в Лос-Анджелес 1920-х років! -->
+<!--                    Зустрічайте на великому екрані Бреда Пітта, Марґо Роббі, Дієго Кальву, -->
+<!--                    Тобі Маґвайра й Олівію Вайлд в епічній кіноісторії. Шалена -->
+<!--                    розповідь про величезні амбіції та надмірну дозволеність розкаже про злети -->
+<!--                    та падіння в епоху декадансу та розпусти в ранньому Голлівуді.</p>-->
+<!--                </div>-->
+<!--            </div>-->
+        </div>
+    </main>
 
-<main>
-    <!--<div class="link-tree">
-        <a href="/templates/index.html">Quad Cinema</a><img src="/static/assets/Expand_right.png" alt="->">
-        <a href="#">Фільми</a><img src="/static/assets/Expand_right.png" alt="->">
-        <a href="#">Вавилон</a><img src="/static/assets/Expand_right.png" alt="->">
-    </div>-->
-    <div id="movie-box" class="wrapper">
-<!--        <div id="image-container">-->
-<!--            <img src="https://miromax.film/images/cinema/ky1-521.jpg" alt="movieLogo">-->
-<!--        </div>-->
-<!--        <div class="info-section">-->
-<!--            <h1>Вавилон</h1>-->
-<!--            <p>Вік: <span id="age-restriction">18+</span></p>-->
-<!--            <p>Період прокату: <span id="period">19.03.2023 - 23.05.2023</span></p>-->
-<!--            <p>Жанр: <span id="genre">історичний, драма</span></p>-->
-<!--            <p>Тривалість: <span id="duration">189 хв.</span></p>-->
-<!--            <p>У головних ролях: <span id="main-chars">Бред Пітт, Марґо Роббі, Тобі Маґваєр, Олівія Вайлд</span></p>-->
-<!--            <p id="movie-description">Лауреат премії «Оскар» Демієн Шазелл збирає неповторний зірковий каст-->
-<!--                та запрошує поринути в Лос-Анджелес 1920-х років!-->
-<!--                Зустрічайте на великому екрані Бреда Пітта, Марґо Роббі, Дієго Кальву,-->
-<!--                Тобі Маґвайра й Олівію Вайлд в епічній кіноісторії. Шалена-->
-<!--                розповідь про величезні амбіції та надмірну дозволеність розкаже про злети-->
-<!--                та падіння в епоху декадансу та розпусти в ранньому Голлівуді.</p>-->
-<!--        </div>-->
-    </div>
-</main>
 <script src="/js/common/header.js"></script>
-<script type="module" src="/js/movie/movie.js"></script>
-
+<script type="module" src="/js/movie/movies_page.js"></script>
 </body>
-</html>
