--- a/cinema/src/main/resources/templates/soon.html
+++ b/cinema/src/main/resources/templates/soon.html
@@ -7,14 +7,11 @@
     <link rel="stylesheet" type="text/css" href="/css/style.css">
     <link rel="stylesheet" type="text/css" href="/css/header.css">
     <link rel="stylesheet" type="text/css" href="/css/popup.css">
-
-    <link rel="icon" type="image/x-icon" href="/img/icon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-
-
-    <title>FilmName</title>
+    <script defer src="../static/js/contact_service.js"></script>
+    <title>QUAD Cinema</title>
 </head>
 <body>
 <div id="background-popup"></div>
@@ -75,36 +72,11 @@
     </div>
 </div>
 
-
 <main>
-    <!--<div class="linkTree">
-        <a href="/templates/index.html">Quad Cinema</a><img src="/static/assets/Expand_right.png" alt="->">
-        <a href="#">Фільми</a><img src="/static/assets/Expand_right.png" alt="->">
-        <a href="#">Вавилон</a><img src="/static/assets/Expand_right.png" alt="->">
-    </div>-->
-    <div class="wrapper">
-        <div id="imageContainer">
-            <img src="https://miromax.film/images/cinema/ky1-521.jpg" alt="filmLogo">
-        </div>
-        <div class="infoSection">
-            <h1>Вавилон</h1>
-            <p>Вік: <span id="ageRestriction">18+</span></p>
-            <p>Рік: <span id="year">2023</span></p>
-            <p>Період прокату: <span id="period">19.03.2023 - 23.05.2023</span></p>
-            <p>Жанр: <span id="genre">історичний, драма</span></p>
-            <p>Тривалість: <span id="duration">189 хв.</span></p>
-            <p>У головних ролях: <span id="mainChars">Бред Пітт, Марґо Роббі, Тобі Маґваєр, Олівія Вайлд</span></p>
-            <p id="movieDescription">Лауреат премії «Оскар» Демієн Шазелл збирає неповторний зірковий каст
-                та запрошує поринути в Лос-Анджелес 1920-х років!
-                Зустрічайте на великому екрані Бреда Пітта, Марґо Роббі, Дієго Кальву,
-                Тобі Маґвайра й Олівію Вайлд в епічній кіноісторії. Шалена
-                розповідь про величезні амбіції та надмірну дозволеність розкаже про злети
-                та падіння в епоху декадансу та розпусти в ранньому Голлівуді.</p>
-        </div>
-    </div>
-</main>
-<script src="/js/common/header.js"></script>
-<script type="module" src="/js/film/film.js"></script>
 
+
+</main>
+
+<script src="/js/common/header.js"></script>
 </body>
 </html>
