--- a/cinema/src/main/resources/static/css/movie.css
+++ b/cinema/src/main/resources/static/css/movie.css
@@ -1,10 +1,10 @@
-/*
+
 body{
     color: white;
     font-size: 1.2em;
 }
 
-.linkTree{
+.link-tree{
     display: flex;
     align-items: center;
     padding: 40px 60px;
@@ -29,7 +29,7 @@ a{
 .wrapper span{
     margin-left: 16px;
     font-weight: 400;
-    
+
 }
 
 .wrapper img{
@@ -39,15 +39,15 @@ a{
     min-width: min-content;
 }
 
-.imageContainer{
+.image-container{
     width: 30%;
 }
 
-.infoSection{
+.info-section{
     width: 70%;
 }
 
-#movieDescription{
+#movie-description{
     font-weight: 500;
     max-width: 80%;
-}*/
+}
