--- a/cinema/src/main/resources/templates/index.html
+++ b/cinema/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="/css/header.css">
     <link rel="stylesheet" type="text/css" href="/css/popup.css">
     <link rel="stylesheet" type="text/css" href="/css/slider.css">
-    <link rel="icon" type="image/x-icon" href="/img/icon.png">
+    <link rel="icon" type="image/x-icon" href="/img/logo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,14 +17,14 @@
 </head>
 <body>
 <div id="background-popup"></div>
-<header>
+<header id="header">
     <a th:href="@{/}">
         <img src="/img/logo.png" alt="logo">
     </a>
     <div class="dropdown">
-        <button class="dropbtn">Львів, ТРЦ Мегаполіс</button>
-        <div id="cinemas" class="dropdown-content">
-        </div>
+        <select id="cinemas">
+
+        </select>
     </div>
     <nav>
         <ul class="main-nav" >
@@ -89,9 +89,8 @@
     </footer>
 </main>
 
-<script src="/js/common/header.js"></script>
 <script type="module" src="/js/index/index.js"></script>
-
+<script src="/js/common/header.js"></script>
 
 </body>
 </html>
