--- a/cinema/src/main/resources/templates/movie.html
+++ b/cinema/src/main/resources/templates/movie.html
@@ -19,14 +19,14 @@
 </head>
 <body>
 <div id="background-popup"></div>
-<header>
+<header id="header">
     <a th:href="@{/}">
         <img src="/img/logo.png" alt="logo">
     </a>
     <div class="dropdown">
-        <button class="dropbtn">Львів, ТРЦ Мегаполіс</button>
-        <div id="cinemas" class="dropdown-content">
-        </div>
+        <select id="cinemas">
+
+        </select>
     </div>
     <nav>
         <ul class="main-nav">
