--- a/cinema/src/main/resources/static/css/slider.css
+++ b/cinema/src/main/resources/static/css/slider.css
@@ -1,46 +1,74 @@
 .slider-container {
-    margin: 50px 0 80px 0;
+    margin: 140px 0 120px 0;
+    height: 400px;
     position: relative;
-    max-height: 400px;
+    overflow: hidden;
 }
 
-.slider {
+.swiper-wrapper {
+    height: 100%;
+    width: 100%;
+    text-align: center;
+
+}
+
+.swiper {
+    align-content: center;
+    justify-content: center;
+    text-align: center;
+    position: absolute;
     display: flex;
-    aspect-ratio: 16/9;
-    overflow-x: hidden;
-    scroll-snap-type: x mandatory;
-    scroll-behavior: smooth;
-    box-shadow: 0 1.5rem 3rem -0.75rem hsla(0, 0%, 0%, 0.25);
+    height: 400px;
+    width: 100%;
 }
-.slider-wrapper{
-    max-height: 400px;
-}
-.slider img {
-    max-height: 400px;
-    flex: 1 0 100%;
-    scroll-snap-align: start;
+
+.swiper-slide img {
+    height: 400px;
+    width: 100%;
+
     object-fit: cover;
 }
 
-.slider-nav {
-    display: flex;
-    column-gap: 1rem;
+.swiper-slide {
+    max-height: 400px;
+    position: relative;
+    width: fit-content;
+
+    height: 400px;
+}
+
+.swiper-button-next, .swiper-button-next {
     position: absolute;
-    bottom: 1.25rem;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 1;
+    top: 45%;
+    color: white;
 }
 
-.slider-nav a {
-    width: 0.5rem;
-    height: 0.5rem;
-    border-radius: 50%;
-    background-color: #fff;
-    opacity: 0.75;
-    transition: opacity ease 250ms;
+.swiper-button-prev {
+    left: 35px !important;
+    color: white;
+
 }
 
-.slider-nav a:hover {
+.swiper-button-next {
+    right: 35px !important;
+    color: white;
+}
+
+:root {
+    --swiper-theme-color: #ffffff !important;
+}
+
+.swiper-button-prev, .swiper-button-next {
+    cursor: pointer;
+    opacity: 0.5;
+    -webkit-transition: opacity 0.4s ease-in-out;
+    -moz-transition: opacity 0.4s ease-in-out;
+    -ms-transition: opacity 0.4s ease-in-out;
+    -o-transition: opacity 0.4s ease-in-out;
+    transition: opacity 0.4s ease-in-out;
+
+}
+
+.swiper-button-prev:hover, .swiper-button-next:hover {
     opacity: 1;
 }
