--- a/cinema/src/main/resources/templates/index.html
+++ b/cinema/src/main/resources/templates/index.html
@@ -29,7 +29,7 @@
         </select>
     </div>
     <nav>
-        <ul class="main-nav" >
+        <ul class="main-nav">
             <a th:href="@{/soon}">
                 <li>Скоро</li>
             </a>
@@ -53,7 +53,7 @@
         <h2>Вхід</h2>
         <input type="email" class="input-field" name="email" id="email" placeholder="Email">
         <input type="password" class="input-field" name="password" id="password" placeholder="Пароль">
-        <label id="lb-log"></label>
+        <label id="login-label"></label>
         <button id="login-popup-button" onclick="loginUser()">Увійти</button>
         <button id="registration-popup-button">Реєстрація</button>
     </div>
@@ -70,7 +70,7 @@
         <input type="password" class="input-field" name="password" id="registration-password" placeholder="Пароль">
         <input type="password" class="input-field" name="repeat-password" id="repeat-password"
                placeholder="Підтвердження пароля">
-        <label id="lb-reg"></label>
+        <label id="registration-label"></label>
         <button id="create-account-button" onclick="resisterNewUser()">Зареєструватися</button>
         <button id="login-form-button"> Увійти в обліковий запис</button>
     </div>
@@ -83,8 +83,9 @@
                 ...
             </div>
 
-
-            <div class="swiper-button-prev"></div>
+            <div class="prev-button">
+                <div class="swiper-button-prev"></div>
+            </div>
             <div class="swiper-button-next"></div>
 
         </div>
