optimization and shuffle content on pages

--- a/cinema/src/main/resources/templates/movie.html
+++ b/cinema/src/main/resources/templates/movie.html
@@ -42,7 +42,7 @@
         </ul>
     </nav>
     <button id="main-login-button">Увійти</button>
-
+    <button hidden id="user-button"></button>
 </header>
 <div class="login-popup">
     <div id="login-form">
