--- a/cinema/src/main/resources/templates/movies.html
+++ b/cinema/src/main/resources/templates/movies.html
@@ -38,7 +38,7 @@
         </ul>
     </nav>
     <button id="main-login-button">Увійти</button>
-
+    <button hidden id="user-button"></button>
 </header>
 <div class="login-popup">
     <div id="login-form">
