--- a/cinema/src/main/resources/static/css/all-movies.css
+++ b/cinema/src/main/resources/static/css/all-movies.css
@@ -1,3 +1,60 @@
+
+footer{
+    height: 100px;
+}
+
+#movie-card-box{
+    font-family: 'Montserrat', sans-serif !important;
+    display: flex;
+    margin-top: 130px;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    gap: 1em;
+}
+
+.title{
+    margin-top: 20px;
+    padding-left: 20px;
+    margin-bottom: 20px;
+    font-size: 40px;
+    font-weight: bold;
+
+}
+.age{
+    font-size: 20px;
+    padding-left: 20px;
+    margin-bottom: 10px;
+    font-weight: bold;
+}
+.duration{
+    font-size: 20px;
+    margin-bottom: 10px;
+    padding-left: 20px;
+    font-weight: 900;
+}
+.duration span{
+    margin-left: 10px;
+    font-size: 20px;
+    font-weight: normal;
+}
+.genres{
+    font-size: 20px;
+    padding-left: 20px;
+    margin-bottom: 10px;
+    font-weight: bold;
+}
+.genres span{
+    margin-left: 10px;
+    font-weight: normal;
+}
+.description{
+    margin-top: 20px;
+    font-size: 18px;
+    margin-left: 0 !important;
+    padding-left: 20px;
+    padding-right: 25%;
+}
+
 .filmsWrapper{
     display: flex;
     justify-content: center;
@@ -9,7 +66,7 @@
 .card{
     position: relative;
     width: 100%;
-    height: 400px;
+    height: 460px;
     border-radius: 20px;   
     overflow: hidden;
     margin: 4vh 0;
@@ -25,9 +82,9 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background: linear-gradient(90deg, #fff 50%, transparent);
+    background: linear-gradient(60deg, #c6c6c6 40%, transparent);
     opacity: 0;
-    transition: 0.5s;
+    transition: opacity 0.5s ease-out;
     z-index: 1;
 }
 
@@ -56,25 +113,4 @@
 
 .information{
     margin: 30px 18px;
-}
-
-.information h1{
-    text-align: center;
-    margin: 8px;
-}
-
-.information p{
-    margin: 12px 0;
-}
-
-.information span{
-    font-weight: 400;
-}
-
-.movieDescription{
-    width: 540px;
-}
-
-.bold-text {
-    font-weight: bold;
 }
