--- a/cinema/src/main/resources/static/css/movie.css
+++ b/cinema/src/main/resources/static/css/movie.css
@@ -31,16 +31,22 @@ a{
     font-weight: 400;
 
 }
-
-.wrapper img{
-    float: left;
-    margin: 4rem;
-    width: 16vw;
-    min-width: min-content;
+.wrapper{
+    margin-top: 150px;
 }
 
-.image-container{
-    width: 30%;
+
+
+#image-container{
+    margin: 100px 100px 0 100px;
+    height: 300px;
+    width: 400px;
+}
+#image-container img{
+    position: relative;
+    border-radius: 20px;
+    height: 500px;
+    width: 300px;
 }
 
 .info-section{
