--- a/cinema/src/main/resources/templates/index.html
+++ b/cinema/src/main/resources/templates/index.html
@@ -14,13 +14,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
-
-    <title>QUAD Cinema</title>
-</head>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 <body>
 <div id="background-popup"></div>
 <header id="header">
-    <a th:href="@{/}">
+    <a th:href="@{/}" class="logo">
         <img src="/img/logo.png" alt="logo">
     </a>
     <div class="dropdown">
