--- a/cinema/src/main/resources/templates/movie.html
+++ b/cinema/src/main/resources/templates/movie.html
@@ -20,7 +20,7 @@
 <body>
 <div id="background-popup"></div>
 <header id="header">
-    <a th:href="@{/}">
+    <a th:href="@{/}" class="logo">
         <img src="/img/logo.png" alt="logo">
     </a>
     <div class="dropdown">
