--- a/cinema/src/main/resources/templates/movie.html
+++ b/cinema/src/main/resources/templates/movie.html
@@ -8,11 +8,14 @@
     <link rel="stylesheet" type="text/css" href="/css/header.css">
     <link rel="stylesheet" type="text/css" href="/css/popup.css">
     <link rel="stylesheet" type="text/css" href="/css/movie.css">
-
     <link rel="icon" type="image/x-icon" href="/img/logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400&display=swap" rel="stylesheet">
+
 
 
     <title>QUAD Cinema</title>
@@ -50,7 +53,7 @@
         <h2>Вхід</h2>
         <input type="email" class="input-field" name="email" id="email" placeholder="Email">
         <input type="password" class="input-field" name="password" id="password" placeholder="Пароль">
-        <label id="lb-log"></label>
+        <label id="login-label"></label>
         <button id="login-popup-button" onclick="loginUser()">Увійти</button>
         <button id="registration-popup-button">Реєстрація</button>
     </div>
@@ -67,7 +70,7 @@
         <input type="password" class="input-field" name="password" id="registration-password" placeholder="Пароль">
         <input type="password" class="input-field" name="repeat-password" id="repeat-password"
                placeholder="Підтвердження пароля">
-        <label id="lb-reg"></label>
+        <label id="registration-label"></label>
         <button id="create-account-button" onclick="resisterNewUser()">Зареєструватися</button>
         <button id="login-form-button"> Увійти в обліковий запис</button>
     </div>
@@ -80,6 +83,20 @@
         <a href="#">Фільми</a><img src="/static/assets/Expand_right.png" alt="->">
         <a href="#">Вавилон</a><img src="/static/assets/Expand_right.png" alt="->">
     </div>-->
+    <div class="nav-container" >
+        <nav>
+            <ul id = "movie-navigation">
+                <a th:href="@{/}">
+                    <li>QUAD Cinema</li>
+                </a>
+                <span class="material-symbols-outlined arrow">arrow_forward_ios</span>
+                <a th:href="@{/movie}">
+                    <li>Фільми</li>
+                </a>
+                <span class="material-symbols-outlined arrow">arrow_forward_ios</span>
+            </ul>
+        </nav>
+    </div>
     <div id="movie-box" class="wrapper">
 <!--        <div id="image-container">-->
 <!--            <img src="https://miromax.film/images/cinema/ky1-521.jpg" alt="movieLogo">-->
@@ -99,7 +116,32 @@
 <!--                та падіння в епоху декадансу та розпусти в ранньому Голлівуді.</p>-->
 <!--        </div>-->
     </div>
+    <div class="tickets-container">
+    <div class="tickets-wrapper">
+        <a href="/movie/1" class="ticket">
+        <div >
+            <p class="movie-time">14:20</p>
+            <p class="ticket-price">140 грн</p>
+        </div>
+        </a>
+        <a href="/movie/1" class="ticket">
+        <div >
+            <p class="movie-time">18:40</p>
+            <p class="ticket-price">160 грн</p>
+        </div>
+        </a>
+        <a href="/movie/1" class="ticket">
+        <div >
+            <p class="movie-time">21:30</p>
+            <p class="ticket-price">160 грн</p>
+        </div>
+        </a>
+    </div>
+
+    </div>
+
 </main>
+<footer></footer>
 <script src="/js/common/header.js"></script>
 <script type="module" src="/js/movie/movie.js"></script>
 
