--- a/cinema/src/main/resources/templates/movies.html
+++ b/cinema/src/main/resources/templates/movies.html
@@ -48,7 +48,7 @@
         <h2>Вхід</h2>
         <input type="email" class="input-field" name="email" id="email" placeholder="Email">
         <input type="password" class="input-field" name="password" id="password" placeholder="Пароль">
-        <label id="lb-log"></label>
+        <label id="login-label"></label>
         <button id="login-popup-button" onclick="loginUser()">Увійти</button>
         <button id="registration-popup-button">Реєстрація</button>
     </div>
@@ -65,12 +65,11 @@
         <input type="password" class="input-field" name="password" id="registration-password" placeholder="Пароль">
         <input type="password" class="input-field" name="repeat-password" id="repeat-password"
                placeholder="Підтвердження пароля">
-        <label id="lb-reg"></label>
+        <label id="registration-label"></label>
         <button id="create-account-button" onclick="resisterNewUser()">Зареєструватися</button>
         <button id="login-form-button"> Увійти в обліковий запис</button>
     </div>
 </div>
-
     <main>
 
         <div id="movie-card-box" class="filmsWrapper">
