--- a/cinema/src/main/resources/templates/movie.html
+++ b/cinema/src/main/resources/templates/movie.html
@@ -97,6 +97,7 @@
             </ul>
         </nav>
     </div>
+
     <div id="movie-box" class="wrapper">
 <!--        <div id="image-container">-->
 <!--            <img src="https://miromax.film/images/cinema/ky1-521.jpg" alt="movieLogo">-->
@@ -116,26 +117,27 @@
 <!--                та падіння в епоху декадансу та розпусти в ранньому Голлівуді.</p>-->
 <!--        </div>-->
     </div>
+
     <div class="tickets-container">
     <div class="tickets-wrapper">
-        <a href="/movie/1" class="ticket">
-        <div >
-            <p class="movie-time">14:20</p>
-            <p class="ticket-price">140 грн</p>
-        </div>
-        </a>
-        <a href="/movie/1" class="ticket">
-        <div >
-            <p class="movie-time">18:40</p>
-            <p class="ticket-price">160 грн</p>
-        </div>
-        </a>
-        <a href="/movie/1" class="ticket">
-        <div >
-            <p class="movie-time">21:30</p>
-            <p class="ticket-price">160 грн</p>
-        </div>
-        </a>
+<!--        <a href="/movie/1/booking/1" class="ticket">-->
+<!--        <div >-->
+<!--            <p class="movie-time">14:20</p>-->
+<!--            <p class="ticket-price">140 грн</p>-->
+<!--        </div>-->
+<!--        </a>-->
+<!--        <a href="/movie/1" class="ticket">-->
+<!--        <div >-->
+<!--            <p class="movie-time">18:40</p>-->
+<!--            <p class="ticket-price">160 грн</p>-->
+<!--        </div>-->
+<!--        </a>-->
+<!--        <a href="/movie/1" class="ticket">-->
+<!--        <div >-->
+<!--            <p class="movie-time">21:30</p>-->
+<!--            <p class="ticket-price">160 грн</p>-->
+<!--        </div>-->
+<!--        </a>-->
     </div>
 
     </div>
