--- a/cinema/src/main/resources/templates/contacts.html
+++ b/cinema/src/main/resources/templates/contacts.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="/css/contacts.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <title>QUAD Cinema</title>
 </head>
