implemented get-comminication on booking, added ShowtimeRepository, BookingRepository, splited MovieService

--- a/cinema/src/main/resources/templates/booking.html
+++ b/cinema/src/main/resources/templates/booking.html
@@ -83,7 +83,9 @@
 
     <div class="screen-container">
         <div class="movie-container">
-            <h1 id="movie-name">Назва фільму</h1>
+            <h1 id="movie-name"></h1>
+            <h2 id="showtime-period"></h2>
+            <h2 id="cinema-hall"></h2>
         </div>
 
         <div class="showcase-container">
