implemented booking logic

--- a/cinema/src/main/resources/templates/booking.html
+++ b/cinema/src/main/resources/templates/booking.html
@@ -118,7 +118,7 @@
                 <h5 id="price" class='subtitle'>Ціна за місце - ₴</h5>
                 <div class="text-wrapper">
                     <p class="text">Total Price ₴<span id="total">0</span></p>
-                    <button>Замовити</button>
+                    <button id="order-button">Замовити</button>
                 </div>
             </div>
 
